src/main/java/com/example/fresco/global/response/error/UserErrorCode.java
package com.example.fresco.global.response.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;
import org.springframework.http.HttpStatus;

@Getter
@RequiredArgsConstructor
public enum UserErrorCode implements ErrorCode {
    NULL_USER("USER_ERR_001", HttpStatus.BAD_REQUEST, "사용자가 존재하지 않습니다."),
    ;

    private final String developCode;
    private final HttpStatus httpStatus;
    private final String errorDescription;
}
